test bug fix for button styling on mobile 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,9 +118,9 @@ input,
 
 .btn-game-main,
 #name-input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none !important;
 }
 
 
